Finalize header styling and fix overflow

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ li {
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template: 1fr 5fr / 1fr 4fr;
+    grid-template: 17vh 83vh / 20vw 80vw;
     grid-template-areas: 
     "sidebar header"
     "sidebar main";
@@ -41,7 +41,7 @@ li {
     grid-template-rows: repeat(3, min-content);
     row-gap: 50px;
     column-gap: 10px;
-    padding: 15px;
+    padding: 15px 15px 0 15px;
 }
 
 #logo {
@@ -101,13 +101,15 @@ li {
 
 /* Header */
 
-#header {
+header {
     background-color: white;
     grid-area: header;
     display: grid;
     grid-template-columns: 3fr 2fr;
     grid-template-rows: 1fr 2fr;
-    padding: 15px 20px;
+    padding: 20px 40px;
+    gap: 10px;
+    
 }
 
 #header-nav {
@@ -117,9 +119,49 @@ li {
     grid-template-columns: subgrid;
 }
 
+#search {
+    display: grid;
+    grid-template-columns: repeat(2, min-content);
+    align-items: center;
+    column-gap: 20px;
+}
+
 #search img {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
+}
+
+input[type="search"] {
+    border: none;
+    background-color:rgba(230, 228, 228, 0.911);
+    height: 2.5rem;
+    width: 40vw;
+    font-size: 1rem;
+    border-radius: 17px;
+
+}
+
+#profile-shortcuts {
+    display: grid;
+    grid-template-columns: repeat(3, max-content);
+    column-gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+#profile-shortcuts p {
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+
+#notifications-icon {
+    width: 30px;
+    height: 30px;
+}
+
+#notifications-icon:hover, .profile-img:hover {
+    cursor: pointer;
+    filter:opacity(.5);
 }
 
 #notifications-icon {
@@ -127,14 +169,23 @@ li {
     height: 20px;
 }
 
-#profile-img-small {
-    width: 20px;
-    height: 20px;
+.profile-img {
+    border-radius: 50%;
 }
 
-#profile-img-large {
-    width: 50px;
-    height: 50px;
+.small {
+    width: 40px;
+    height: 40px;
+}
+
+.medium {
+    width: 60px;
+    height: 60px;
+}
+
+.large {
+    width: 75px;
+    height: 75px;
 }
 
 #header-main {
@@ -144,10 +195,62 @@ li {
     grid-template-columns: subgrid;
 }
 
+#profile-card {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 20px;
+    row-gap: 5px;
+    align-content: center;
+
+}
+
+#profile-card img {
+    grid-row: 1 / 3;
+    grid-column: 1 /2;
+    
+}
+
+#greeting {
+    grid-row: 1 / 2;
+    grid-template-columns: 2 / 3;
+    align-self: end;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+#profile-name {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    font-size: 2rem;
+}
+
+#profile-controls {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+}
+
+button {
+    background-color: #D81159;
+    color: white;
+    font: inherit;
+    font-weight: bold;
+    width: 8vw;
+    height: 35px;
+    border-radius: 20px;
+    border: none;
+}
+
+button:hover {
+    background-color: #eb6898;
+    cursor: pointer;
+}
+
 /* Main Content*/
 
 #main-content {
-    background-color: rgba(209, 204, 204, 0.911);
+    background-color: rgba(230, 228, 228, 0.911);
     grid-area: main;
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -200,9 +303,4 @@ li {
 #trending-projects {
     background-color: white;
     border-radius: 10px;
-}
-
-.profile-icon {
-    width: 20px;
-    height: 20px;
 }
